test/spec_vectors/memory/ok/module_5.wat
(module definition (memory 65536))