test/spec_vectors/memory/fail/module_22.wat
(module (memory 4294967295))